--- a/01-week1.Rmd
+++ b/01-week1.Rmd
@@ -1,4 +1,14 @@
-# Week 1:  
+# Week 1:　オリエンテーション、R(Studio)のインストールと操作、R Markdown
+
+## 「とーけいしょり」とは
+- 本講義のタイトルにもある「統計処理」は、<u>研究の目的などに応じて得られたデータをまとめたり、可視化したり解析する行為<u/>を指します。言語に関する研究の手法は大きく分けて以下の2つがある。
+
+  1. 量的研究（ quantitative research ）
+    - 数量を用いて分析。一般化が目的。「仮説検証型」。
+  2. 質的研究（ qualitative research ）
+    - 数量化せずに分析。一般化は目的ではない。「仮説生成型」。
+
+　寺井は量的な研究しか行ってきていないため、本講義では量的な研究を行うことを念頭に統計処理の方法について講義を行う。しかし、それらが質的研究と全く関連がないわけではない（もし質的な研究に関心がある受講生の方がいたら、関連すると思う点を教えてください）。
 
 ## Rとは
 
@@ -9,14 +19,33 @@
 ## RStudioのカスタマイズ
 - [RStudioの設定変更【見た目】](https://qiita.com/masato-terai/items/4200f3817972fede2dd2)
 
+  - 文字のサイズを大きくしたり、背景の色を変更することが可能
+  - その他にも、()の色分けをしてくれたりなど分析の補助になる機能もある
+
 ## チュートリアル
 
 ## R Markdown入門
 ### R Markdownとは
 
+### 入力のルール
+
 ## R MarkdownでHTMLファイルを作成してみよう
 
-## 次週までの課題
 
+## 次週までの課題
+### 課題内容
+- 自己紹介の文を考える。以下の2項目を必ず入れてください。外部に公開してもいい情報だけを入れてください！
+
+1. 名前、出身、研究科、自分の研究したいことを二文くらいでまとめる。
+
+2. R chunk内で以下の計算をする
+
+  - (ここに計算の項目を載せる)
+  
+### 提出方法
+- メールにファイルを添付して送信。
+- 締め切りは今週の木曜日まで
 
 ## 参考文献
+- 📚外国語教育ハンドブック
+- 💻[RStudioの設定変更【見た目】]
