--- a/01-week1.Rmd
+++ b/01-week1.Rmd
@@ -273,9 +273,11 @@ total <- sum(hitsu, miso)
 
 ## 次週までの課題
 ### 課題内容
-- 自己紹介の文をR Markdownで作成し、出力したHTMLファイルを提出してください。以下の2項目を必ず入れてください。外部に公開してもいい情報だけを入れてください！
+- 小テストの準備。本講義の内容に関する簡単なクイズを行います。配布した資料を見返しておいてください。
+- 自己紹介の文をR Markdownで作成し、出力したHTMLファイルを提出してください。以下の2項目を必ず入れてください。クラス内や外部へ公開してもいい情報だけを入れてください！
 
 - 名前、出身、研究科、自分の研究したいことを二文くらいでまとめる。
+  - レベル分け、箇条書き、強調（e.g., 下線、太字、イタリック）
 
 ### 提出方法
 - メールにファイルを添付して送信。
