--- a/02-week2.Rmd
+++ b/02-week2.Rmd
@@ -32,26 +32,82 @@
 
 - 前半は主に説明、後半はRを使用して手を動かしながらやってもらいます。
 
-## データの尺度
-- 名義尺度
-- 順序尺度
-- 間隔尺度
-- 比率尺度
-
 ## 記述統計と推測統計
 
 - 誤差！
+
+## データの尺度
+
+- 4種類あり、比例、間隔、順序、名義の順に情報量が少なくなる
+
+  - 上の順序のデータを下の順位のデータに変換することはできるが、逆の変換はできない
+
+### 比率尺度（ratio scale）
+
+- **様々な統計処理に使える**
+- 例：長さ、重さ、時間
+
+- ゼロが「何もない」ことを表す
+
+- メモリがすべて等間隔
+- データ同士で四則演算ができる
+
+### 間隔尺度（interval scale）
+
+- 例：温度、テストの得点、偏差値、テストの平均点
+
+- メモリの間隔は同じ
+- ゼロは「何もない」ことを**表さない**
+- 「足す」「引く」は可能。「かける」「わる」はできない。
+
+### 順序尺度（ordinal scale）
+
+- 例：順位、投票のランキング、リカート・スケール（Likert scale）
+
+- 順位のデータ
+
+- メモリの間隔が一定になる保証はない（= 大小のみを指す）。
+
+- 0位もない
+
+- 四則演算ができない
+
+### 名義尺度（nominal scale）
+
+- データに任意の数を与えたデータ
+
+  - 例：男性は1、女性は2
+  
+- メモリは等間隔でない
+
+- ゼロは「何もない」を表さない
+
+- 四則演算ができない
+
+## 「～とみなす」
+
+- テスト得点は厳密にいうと、間隔尺度とは言えない？
+
+  - 配点が1点と5点は5倍の違いがあるか？
+  - 0点は能力が全くないと言えるか？
+  
+- しかしテスト得点を統計分析したい場面が多く、統計分析は間隔尺度以上のデータを必要とする。
+
+- テスト得点の間隔を等間隔にする努力を怠らないのであれば間隔尺度として「みなそう」ということに現状はなっている（完全に合意されているわけではない）。
+
+  - 本講義ではテスト得点を間隔尺度として「みなす」
+
+
 
 ## 要約統計量
 信頼区間まで説明
 
 ## 様々なグラフ
-
+- それぞれがどんなデータを使っているかによって異なることを説明する
 ヒストグラム
 箱ひげ図
 折れ線グラフ
 散布図
-可視化が基本ということを伝える
 
 - (point)
 - データを分析する際は、まず要約統計量や可視化を行い、データを注意深く観察する。→ とりあえず××分析などはだめ。それならAIと同じ。ブラックボックス化をできるだけ避ける。
@@ -227,11 +283,6 @@ mean(mtcars$mpg)
 # 中央値 (median)
 median(mtcars$mpg)
 
-# 最頻値 (mode) ※最頻値は複数ある場合があるため table() を使用
-table_mpg <- table(mtcars$mpg)
-mode_mpg <- as.numeric(names(table_mpg)[table_mpg == max(table_mpg)])
-mode_mpg  # 最も頻度の高い値を表示
-
 # 最大値 (max)
 max(mtcars$mpg)
 
@@ -257,9 +308,6 @@ kurtosis(mtcars$mpg)
 # 四分位範囲 (IQR)
 IQR(mtcars$mpg)
 ```
-
-
-
 #### 一度に出力
 - ```base```関数
 ```{r}
@@ -276,7 +324,16 @@ describe(mtcars$mpg)
 
 #### 最頻値
 
-- Rでは最頻値の求め方に少し一工夫必要
+- Rでは最頻値の求め方に少し一工夫必要。いろいろなやり方があるが、その一例として下記がある。
+
+```{r}
+# 最頻値 (mode) ※最頻値は複数ある場合があるため table() を使用
+table_mpg <- table(mtcars$mpg)
+mode_mpg <- as.numeric(names(table_mpg)[table_mpg == max(table_mpg)])
+mode_mpg  # 最も頻度の高い値を表示
+
+```
+
 
 ### 作図
 
