--- a/02-week2.Rmd
+++ b/02-week2.Rmd
@@ -34,7 +34,7 @@
 
 ## 記述統計と推測統計
 
-- 誤差！
+- 誤差！の説明などをして、統計が神がもたらす結果みたいな安易な考えを持たせない。
 
 ## データの尺度
 
@@ -96,8 +96,6 @@
 - テスト得点の間隔を等間隔にする努力を怠らないのであれば間隔尺度として「みなそう」ということに現状はなっている（完全に合意されているわけではない）。
 
   - 本講義ではテスト得点を間隔尺度として「みなす」
-
-
 
 ## 要約統計量
 信頼区間まで説明
