--- a/02-week2.Rmd
+++ b/02-week2.Rmd
@@ -26,9 +26,23 @@ library(patchwork)
 
 - 前半は主に説明、後半はRを使用して手を動かしながらやってもらいます。
 
-## 記述統計と推測統計
+## 記述統計学と推測統計学
 
-- 誤差！の説明などをして、統計が神がもたらす結果みたいな安易な考えを持たせない。
+### 記述統計学（descriptive statistics）
+- 得たデータを要約する統計手法
+
+  - **統計量（statistic）**の算出、データの可視化
+
+    - 統計量：データから計算された数値のこと（e.g., 平均値や合計値）
+    
+### 推測統計学（inferential statistics）
+- 得られたデータから、**母集団**の性質を推測する。 測定、将来の予測、因果関係の推測、現象の説明という主に4つの目的
+
+  - 母集団：想定する集団のこと（日本人の英語力を調べたい = 日本人全員）
+
+- 母集団の一部から集めたデータから、母集団全体に当てはまることを理解する
+
+  - 記述統計ではできない
 
 ## データの尺度
 
