--- a/02-week2.Rmd
+++ b/02-week2.Rmd
@@ -426,18 +426,6 @@ survey_data %>%
                 full_width = T) 
 ```
 
-- バルーンプロット
-
-```{r}
-ggplot(vote_counts, aes(x = Pokemon, y = Frequency)) +
-  geom_point(aes(size = Frequency), shape = 21, fill = "skyblue", color = "black", alpha = 0.7) +
-  scale_size(range = c(3, 10)) +  # バルーンの大きさ調整
-  labs(title = "ポケモン人気投票 バルーンプロット", x = "ポケモン", y = "投票数") +
-  theme_minimal()
-
-```
-
-
 ## ハンズオンセッション
 
 ### Rの基本用語
@@ -734,9 +722,21 @@ vioplot(mtcars$mpg[mtcars$vs == 1], mtcars$mpg[mtcars$vs == 0],
         ylab = "Miles Per Gallon")
 ```
 
-
 # まとめ
-（平井 et al.の図を挿入する）
+（引用：平井 et al. (20) p. 3）
+
+| 種類         | 指標                         | 特徴 |
+|--------------|------------------------------|------|
+| 名義尺度以上 | 最頻値 (mode)                 | 最も多い度数を示すデータの値。主に名義尺度で用いられる代表値。 |
+| 順序尺度以上 | 中央値 (median)               | データを順番に並べたときの真ん中（50%タイル）の値。順序情報に基づくため外れ値の影響を受けにくい。<br>（例）テストの得点が {1, 3, 5, 7, 9} の場合は、中央値は 5 になる。 |
+| 間隔尺度以上 | 平均 (mean)                   | 個々の測定値の和を測定値の個数で割った値。中央値に比べ、外れ値に引っ張られる傾向がある。なお、標本平均 \(\bar{x}\) と区別して母集団の平均を表す場合は平均（\(\mu\)）と呼ぶ。 |
+| 名義尺度以上 | 平均情報量                    | 総度数と各カテゴリ度数との比率。<br>（例）本の貸し出し総数が 10 件とすると、総度数は 10 件。そのうち、フィクションは 3 件、実務書 3 件、ノンフィクション 2 件、それ以外のジャンルは 2 件とカテゴリ度数を示す。 |
+| 名義尺度以上 | 範囲 (range)                  | 最大値と最小値との差。 |
+| 順序尺度以上 | 四分位偏差 (quartile deviation) | 順に並んだデータを 4 等分し、その境界となる第1四分位数（\(Q_1\)：25%タイル）と第3四分位数（\(Q_3\)：75%タイル）の差を四分位範囲（inter quartile range）と言う。それを 2 で割った値が四分位偏差。<br>\(Q = \frac{Q_3 - Q_1}{2}\) |
+| 間隔尺度以上 | 分散 (variance)               | 平均からの偏差平方和の大きさを示す。データ \(x_i\) と平均（\(\bar{x}\)）の差を2乗して、全データ（\(n\)）またはデータ数 \(n-1\)（標本分散）で割った値。統計では、不偏不分散（unbiased variance）として、\(n-1\) で割ることが多い。<br>\(s^2 = \frac{\sum (x_i - \bar{x})^2}{n-1}\) |
+| 間隔尺度以上 | 標準偏差 (standard deviation) | 上記の分散の平方根を取った値で、非負値になる。単位が元の値と同じ尺度なので直感的に解釈しやすい。小さい値はデータが平均の近くにあり、個別データのばらつきが小さいことを示す。<br>\(s = \sqrt{\frac{\sum (x_i - \bar{x})^2}{n-1}}\) |
+
+
 
 ## 次週までの課題
 ### 課題内容
